--- a/Script/HUANG_JS.conf
+++ b/Script/HUANG_JS.conf
@@ -1,4 +1,4 @@
-#自用boxjs脚本收集
+#自用脚本收集
 
 #彩云天气
 cron "0 6-22/2 * * *" script-path=https://raw.githubusercontent.com/Peng-YM/QuanX/master/Tasks/caiyun.js, tag=彩云天气
