--- a/Script/HUANG_JS.conf
+++ b/Script/HUANG_JS.conf
@@ -1,4 +1,10 @@
-#自用脚本收集
+#!name=HUANG_boxjs
+#!desc=自用收集脚本
+#!author=HUANG
+#!homepage=https://github.com/huang1179/Loon
+#!icon=https://raw.githubusercontent.com/huang1179/Loon/H/plugin/HUANG.png
+
+
 
 #彩云天气
 cron "0 6-22/2 * * *" script-path=https://raw.githubusercontent.com/Peng-YM/QuanX/master/Tasks/caiyun.js, tag=彩云天气
