--- a/Script/HUANG_Js.conf
+++ b/Script/HUANG_Js.conf
@@ -21,8 +21,7 @@ http-response https://user-kaji-api.b612kaji.com/v1/purchase/subscription/subscr
 http-response https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/githubdulong/Script/master/CamScanner.js, tag=扫描全能王
 
 #酷我年费会员
-http-response ^https?:\/\/.*\.(kuwo|lrts)\.(cn|me)\/(a\.p|music\.pay|(vip\/(v2|enc)\/(theme|user\/vip))|(EcomResource|(Mobile)?Ad)Serv(er|ice)).* requires-body=1,script-path=https://raw.githubusercontent.com/huang1179/Loon/H/Script/kwX.js, tag=酷我
-
+http-response ^https?:\/\/.*\.(kuwo|lrts)\.(cn|me)\/(a\.p|music\.pay|(vip\/(v2|enc)\/(theme|user\/vip))|(EcomResource|(Mobile)?Ad)Serv(er|ice)).* requires-body=1,script-path=https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/kw.js, tag=酷我
 #爱企查vip
 http-response ^https:\//aiqicha.baidu.com\/usercenter\/getvipinfoajax requires-body=1,script-path=https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/aiqicha.js,tag=爱企查
 
@@ -38,4 +37,4 @@ http-response ^https?:\/\/(h5|api)\.xiuxiu\.meitu\.com\/v\d\/(h\d\/vip|vip|user)
 #WPS会员
 http-response ^https?:\/\/.*?account\.wps\.(com|cn)(:\d+)?\/api\/users\/\w+\/overview$ script-path=https://raw.githubusercontent.com/I-am-R-E/Functional-Store-Hub/Master/WPSOffice/Script/WPS.js, requires-body=true, timeout=10, tag=WPS
 
-hostname =spclient.wg.spotify.com, user-kaji-api.b612kaji.com, vip1.kuwo.cn, *.kuwo.cn, aiqicha.baidu.com, appwk.baidu.com, user.ftmailbox.cn, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, testflight.apple.com, account.wps.cn,*account.wps.com
+hostname =spclient.wg.spotify.com, user-kaji-api.b612kaji.com, vip1.kuwo.cn, *.kuwo.cn, *.lrts.me, aiqicha.baidu.com, appwk.baidu.com, user.ftmailbox.cn, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, testflight.apple.com, account.wps.cn,*account.wps.com
