--- a/Script/HUANG_Js.conf
+++ b/Script/HUANG_Js.conf
@@ -38,4 +38,7 @@ http-response ^https?:\/\/(h5|api)\.xiuxiu\.meitu\.com\/v\d\/(h\d\/vip|vip|user)
 #WPS会员
 http-response ^https?:\/\/.*?account\.wps\.(com|cn)(:\d+)?\/api\/users\/\w+\/overview$ script-path=https://raw.githubusercontent.com/I-am-R-E/Functional-Store-Hub/Master/WPSOffice/Script/WPS.js, requires-body=true, timeout=10, tag=WPS
 
-hostname =spclient.wg.spotify.com, user-kaji-api.b612kaji.com, vip1.kuwo.cn, *.kuwo.cn, *.lrts.me, aiqicha.baidu.com, appwk.baidu.com, user.ftmailbox.cn, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, testflight.apple.com, account.wps.cn,*account.wps.com
+#解除微信外链限制
+http-response ^https\:\/\/(weixin110\.qq|security.wechat)\.com\/cgi-bin\/mmspamsupport-bin\/newredirectconfirmcgi\? script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/asset/UnblockURLinWeChat.js, requires-body=true, timeout=10, tag=UnblockURLinWeChat
+
+hostname =spclient.wg.spotify.com, user-kaji-api.b612kaji.com, vip1.kuwo.cn, *.kuwo.cn, *.lrts.me, aiqicha.baidu.com, appwk.baidu.com, user.ftmailbox.cn, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, testflight.apple.com, account.wps.cn,*account.wps.com, weixin110.qq.com, security.wechat.com
