--- a/Script/HUANG_Js.conf
+++ b/Script/HUANG_Js.conf
@@ -48,4 +48,8 @@ http-response ^https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x
 http-response ^https:\/\/ap(p|i)\.bili(bili|api)\.(com|net)\/(pgc\/view\/v\d\/app\/season|x\/v\d\/search\/defaultwords)\?access_key script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bili_Auto_Regions.js, requires-body=true, tag=bili自动地区
 http-request ^https:\/\/ap(p|i)\.bili(bili|api)\.(com|net)\/x\/v\d\/search(\/type)?\?.+?%20(%E6%B8%AF|%E5%8F%B0|%E4%B8%AD)& script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bili_Auto_Regions.js, requires-body=true, tag=bili自动地区(搜索)
 
-hostname =spclient.wg.spotify.com, user-kaji-api.b612kaji.com, vip1.kuwo.cn, *.kuwo.cn, *.lrts.me, aiqicha.baidu.com, appwk.baidu.com, user.ftmailbox.cn, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, testflight.apple.com, account.wps.cn,*account.wps.com, weixin110.qq.com, security.wechat.com, api.bilibili.com,app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com,manga.bilibili.com,ap?.bilibili.com, ap?.biliapi.net
+# 脚本转换器 raw.githubusercontent.com,gist.githubusercontent.com
+http-response ^https?:\/\/(raw|gist)\.githubusercontent.com/.*\.js$ script-path=https://raw.githubusercontent.com/Peng-YM/ScriptConverter/master/js-converter.js, requires-body=true, timeout=10, enabled=false, tag=脚本转换器, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/SCTC.png
+
+
+hostname =spclient.wg.spotify.com, user-kaji-api.b612kaji.com, vip1.kuwo.cn, *.kuwo.cn, *.lrts.me, aiqicha.baidu.com, appwk.baidu.com, user.ftmailbox.cn, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, testflight.apple.com, account.wps.cn,*account.wps.com, weixin110.qq.com, security.wechat.com, api.bilibili.com,app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com,manga.bilibili.com,ap?.bilibili.com, ap?.biliapi.net, raw.githubusercontent.com,gist.githubusercontent.com
