--- a/Script/HUANG_BoxJs.conf
+++ b/Script/HUANG_BoxJs.conf
@@ -15,3 +15,6 @@ cron "30 10 * * *" script-path=https://raw.githubusercontent.com/Peng-YM/QuanX/m
 #热门监控
 cron "0 */6 * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/hotsearch/hot.js, tag=热门监控
 
+#汇率监控
+cron "0 12 * * *" script-path=https://raw.githubusercontent.com/Peng-YM/QuanX/master/Tasks/exchange.js, tag=汇率监控, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Cryptocurrency_3.png
+
