--- a/Script/HUANG_Js.conf
+++ b/Script/HUANG_Js.conf
@@ -8,38 +8,63 @@
 
 
 
-#spotify部分解锁premium,建议重新登录,音质不能设置为超高
+# Spotify部分解锁premium,音质不能设置为超高，功能: 1.去除播放广告 2.歌手/专辑列表正常展示 3.去除随机播放 hostname =spclient.wg.spotify.com
+http-request ^https:\/\/spclient\.wg\.spotify\.com\/(artistview\/v1\/artist|album-entity-view\/v2\/album)\/ script-path=https://raw.githubusercontent.com/app2smile/rules/master/js/spotify-json.js, timeout=10, tag=spotifyJson
 http-response ^https\:\/\/spclient\.wg\.spotify\.com\/(bootstrap\/v1\/bootstrap|user-customization-service\/v1\/customize)$ script-path=https://raw.githubusercontent.com/app2smile/rules/master/js/spotify-proto.js, requires-body=true, binary-body-mode=true, timeout=10, tag=spotify
+
+# 适用于Loon的节点检测工具，可进行IP查询、多媒体检测等
+generic script-path=https://raw.githubusercontent.com/getsomecat/Qx/main/Net_Speed.js,timeout=10,tag=节点网速测试,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Speedtest.png
+generic script-path=https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Resource/Script/Node_detection_tool/LocationDetection.js,tag=GeoLocation,timeout=10,img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Domestic.png
+generic script-path=https://raw.githubusercontent.com/Loon0x00/LoonScript/main/MediaCheck/ytb_check.js, tag=YouTube-解锁查询, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
+generic script-path=https://raw.githubusercontent.com/Loon0x00/LoonScript/main/MediaCheck/nf_check.js, tag=Netflix-解锁查询, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netflix.png
+generic script-path=https://raw.githubusercontent.com/Loon0x00/LoonScript/main/MediaCheck/disney_check.js, tag=Disney-解锁查询, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Disney+.png
+generic script-path=https://raw.githubusercontent.com/Loon0x00/LoonScript/main/MediaCheck/param_check.js, tag=Paramount-解锁查询, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Paramount.png
+generic script-path=https://raw.githubusercontent.com/Loon0x00/LoonScript/main/MediaCheck/dazn_check.js, tag=Dazn-解锁查询, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/DAZN_2.png
+generic script-path=https://raw.githubusercontent.com/Loon0x00/LoonScript/main/MediaCheck/discovery_check.js, tag=Discovery-解锁查询, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/discovery+.png
+generic script-path=https://gitlab.com/lodepuly/vpn_tool/-/raw/main/Resource/Script/Node_detection_tool/NodeUnlockDetection.js, tag=流媒体-节点解锁查询, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/ForeignMedia.png
+
+# 代理链路检测
+# 使用 Sub-Store 正常订阅节点，但在最下方的 节点操作 中选择 脚本操作 并选择 链接 添加 链接https://raw.githubusercontent.com/I-am-R-E/Functional-Store-Hub/Master/NodeLinkCheck/Sub-Store/Operator.js
+generic script-path=https://raw.githubusercontent.com/I-am-R-E/Functional-Store-Hub/Master/NodeLinkCheck/Script/NodeLinkCheck.js, tag=代理链路检测
+
+# 节点信息查询（IP，服务商，国家，时区，经纬度，货币）
+generic script-path=https://raw.githubusercontent.com/deezertidal/private/main/ip-api.js,tag=节点信息查询,img-url= https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Domestic.png,timeout=10
 
 #TF区域限制解除
 http-request ^https?:\/\/testflight\.apple\.com\/v\d\/accounts\/.+?\/install$ requires-body=1,max-size=0,script-path=https://gist.githubusercontent.com/NobyDa/9be418b93afc5e9c8a8f4d28ae403cf2/raw/TF_Download.js, tag=TF区域限制解除
 
-#B612咔叽解锁
+# B612咔叽 hostname=user-kaji-api.b612kaji.com
 http-response https://user-kaji-api.b612kaji.com/v1/purchase/subscription/subscriber/status requires-body=1,script-path=https://github.com/deezertidal/private/raw/master/js-backup/Crack/612.js, tag=B612咔叽
 
-#扫描全能王解锁
-http-response https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/githubdulong/Script/master/CamScanner.js, tag=扫描全能王
+# 扫描全能王 hostname =ap*.intsig.net
+http-response https:\/\/(api|api-cs)\.intsig\.net\/purchase\/cs\/query_property\? requires-body=1, script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/CamScanner.js, tag=扫描全能王
 
-#酷我年费会员
-http-response ^https?:\/\/.*\.(kuwo|lrts)\.(cn|me)\/(a\.p|music\.pay|(vip\/(v2|enc)\/(theme|user\/vip))|(EcomResource|(Mobile)?Ad)Serv(er|ice)).* requires-body=1,script-path=https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/kw.js, tag=酷我
+# 一寸证件照 hostname = idp2api.netpock.com
+http-response ^http[s]?:\/\/idp2api.netpock.com\/api\/user_info requires-body=1,script-path=https://raw.githubusercontent.com/89996462/Quantumult-X/main/ycdz/yczjz.js, tag=一寸证件照
 
-#爱企查vip
-http-response ^https:\//aiqicha.baidu.com\/usercenter\/getvipinfoajax requires-body=1,script-path=https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/aiqicha.js,tag=爱企查
+# 代码重构,这版是最完美！！！的酷我解锁 hostname = *.kuwo.cn, *.lrts.me
+http-response ^https?:\/\/.*\.(kuwo|lrts)\.(cn|me)\/(a\.p|music\.pay|(vip\/(v2|enc)\/(theme|user\/vip))|(EcomResource|(Mobile)?Ad)Serv(er|ice)).* script-path=https://raw.githubusercontent.com/nameking77/Qx/main/rewrite/kw.js,requires-body=true, timeout=10, tag=酷我音乐
 
-#百度文库文章解锁
-http-response ^https:\/\/appwk\.baidu\.com\/naapi\/user\/getinfo requires-body=1,script-path=https://github.com/deezertidal/private/raw/master/js-backup/Crack/baidulibrary.js,tag=百度文库
+# 爱企查vip hostname = aiqicha.baidu.com
+http-response ^https:\//aiqicha.baidu.com\/usercenter\/getvipinfoajax requires-body=1,script-path=https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/aiqicha.js, tag=爱企查
+
+# 解锁百度文库阅读权限 hostname = appwk.baidu.com
+http-response ^https:\/\/appwk\.baidu\.com\/naapi\/user\/getinfo requires-body=1,script-path=https://github.com/deezertidal/private/raw/master/js-backup/Crack/baidulibrary.js, tag=百度文库
 
 #FT中文网解锁
 http-response ^https?:\/\/user\.ftmailbox\.cn\/ios-receipt-validation\.php.* requires-body=1,script-path=https://raw.githubusercontent.com/deezertidal/private/master/js-backup/Crack/ftchinese.js,tag=FT中文网
 
-#美图秀秀会员
-http-response ^https?:\/\/(h5|api)\.xiuxiu\.meitu\.com\/v\d\/(h\d\/vip|vip|user)\/ requires-body=1,script-path=https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/MeiTuXiuXiu.js,tag=美图秀秀
+# 美图秀秀VIP hostname= api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com
+http-response ^https?:\/\/(h5|api)\.xiuxiu\.meitu\.com\/v\d\/(h\d\/vip|vip|user)\/ requires-body=1,script-path=https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/MeiTuXiuXiu.js, tag=美图秀秀
 
 #WPS会员
 http-response ^https?:\/\/.*?account\.wps\.(com|cn)(:\d+)?\/api\/users\/\w+\/overview$ script-path=https://raw.githubusercontent.com/I-am-R-E/Functional-Store-Hub/Master/WPSOffice/Script/WPS.js, requires-body=true, timeout=10, tag=WPS
 
 #解除微信外链限制
 http-response ^https\:\/\/(weixin110\.qq|security.wechat)\.com\/cgi-bin\/mmspamsupport-bin\/newredirectconfirmcgi\? script-path=https://raw.githubusercontent.com/zZPiglet/Task/master/asset/UnblockURLinWeChat.js, requires-body=true, timeout=10, tag=UnblockURLinWeChat
+
+# 石墨文档 hostname=shimo.im
+http-response ^https:\//shimo.im\/lizard-api\/users\/me requires-body=1,script-path=https://raw.githubusercontent.com/litieyin/AD_VIP/main/Script/shimo.js, tag=石墨文档
 
 #哔哩哔哩脚本
 # 哔哩哔哩番剧开启1080P+ （原NobyDa改写）
@@ -49,7 +74,9 @@ http-response ^https:\/\/ap(p|i)\.bili(bili|api)\.(com|net)\/(pgc\/view\/v\d\/ap
 http-request ^https:\/\/ap(p|i)\.bili(bili|api)\.(com|net)\/x\/v\d\/search(\/type)?\?.+?%20(%E6%B8%AF|%E5%8F%B0|%E4%B8%AD)& script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bili_Auto_Regions.js, requires-body=true, tag=bili自动地区(搜索)
 
 # 脚本转换器 raw.githubusercontent.com,gist.githubusercontent.com
-http-response ^https?:\/\/(raw|gist)\.githubusercontent.com/.*\.js$ script-path=https://raw.githubusercontent.com/Peng-YM/ScriptConverter/master/js-converter.js, requires-body=true, timeout=10, enabled=false, tag=脚本转换器, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/SCTC.png
+http-response ^https?:\/\/(raw|gist)\.githubusercontent.com/.*\.js$ script-path=https://raw.githubusercontent.com/Peng-YM/ScriptConverter/master/js-converter.js, requires-body=true, timeout=10, enabled=false, tag=脚本转换器
 
+# YouTube去首页瀑布流广告/播放页推荐列表广告(非贴片广告)
+http-response ^https:\/\/youtubei\.googleapis\.com\/youtubei\/v1\/(browse|next)\? script-path=https://raw.githubusercontent.com/app2smile/rules/master/js/youtube.js, requires-body=true, binary-body-mode=true, timeout=10, tag=youtube-proto
 
-hostname =spclient.wg.spotify.com, user-kaji-api.b612kaji.com, vip1.kuwo.cn, *.kuwo.cn, *.lrts.me, aiqicha.baidu.com, appwk.baidu.com, user.ftmailbox.cn, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, testflight.apple.com, account.wps.cn,*account.wps.com, weixin110.qq.com, security.wechat.com, api.bilibili.com,app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com,manga.bilibili.com,ap?.bilibili.com, ap?.biliapi.net, raw.githubusercontent.com,gist.githubusercontent.com
+hostname =spclient.wg.spotify.com, user-kaji-api.b612kaji.com, ap*.intsig.net, idp2api.netpock.com, vip1.kuwo.cn, *.kuwo.cn, *.lrts.me, aiqicha.baidu.com, appwk.baidu.com, user.ftmailbox.cn, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, testflight.apple.com, account.wps.cn,*account.wps.com, weixin110.qq.com, security.wechat.com, shimo.im, api.bilibili.com,app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com,manga.bilibili.com,ap?.bilibili.com, ap?.biliapi.net, raw.githubusercontent.com,gist.githubusercontent.com,-redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com
