--- a/Script/HUANG_Js.conf
+++ b/Script/HUANG_Js.conf
@@ -64,4 +64,8 @@ http-response ^https:\/\/ap(p|i)\.bilibili\.com\/((pgc\/player\/api\/playurl)|(x
 http-response ^https:\/\/ap(p|i)\.bili(bili|api)\.(com|net)\/(pgc\/view\/v\d\/app\/season|x\/v\d\/search\/defaultwords)\?access_key script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bili_Auto_Regions.js, requires-body=true, tag=bili自动地区
 http-request ^https:\/\/ap(p|i)\.bili(bili|api)\.(com|net)\/x\/v\d\/search(\/type)?\?.+?%20(%E6%B8%AF|%E5%8F%B0|%E4%B8%AD)& script-path=https://raw.githubusercontent.com/NobyDa/Script/master/Surge/JS/Bili_Auto_Regions.js, requires-body=true, tag=bili自动地区(搜索)
 
-hostname =spclient.wg.spotify.com, user-kaji-api.b612kaji.com, ap*.intsig.net, idp2api.netpock.com, vip1.kuwo.cn, *.kuwo.cn, *.lrts.me, aiqicha.baidu.com, appwk.baidu.com, user.ftmailbox.cn, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, testflight.apple.com, account.wps.cn,*account.wps.com, weixin110.qq.com, security.wechat.com, shimo.im, api.bilibili.com,app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com,manga.bilibili.com,ap?.bilibili.com, ap?.biliapi.net
+# 网易云解锁VIP hostname = *.music.163.com
+http-request ^http[s]?:\/\/.+music.+(player\/url|playlist|entrance|\/eapi\/search\/).*$ script-path=https://raw.githubusercontent.com/WeiRen0/Scripts/main/wyun.js, timeout=60 ,tag=网易云
+
+
+hostname =spclient.wg.spotify.com, user-kaji-api.b612kaji.com, ap*.intsig.net, idp2api.netpock.com, vip1.kuwo.cn, *.kuwo.cn, *.lrts.me, aiqicha.baidu.com, appwk.baidu.com, user.ftmailbox.cn, api.xiuxiu.meitu.com, h5.xiuxiu.meitu.com, testflight.apple.com, account.wps.cn,*account.wps.com, weixin110.qq.com, security.wechat.com, shimo.im, api.bilibili.com,app.bilibili.com,api.live.bilibili.com,api.vc.bilibili.com,manga.bilibili.com,ap?.bilibili.com, ap?.biliapi.net,*.music.163.com
